k8s/paranmanzang.yaml
#gateway-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: gateway-server
          image: songjih452/paran:gateway-latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  annotations:
    service.beta.kubernetes.io/ncloud-load-balancer-ssl-certificate-no: "34124"
    service.beta.kubernetes.io/ncloud-load-balancer-tls-ports: "443"
spec:
  selector:
    app: gateway-server
  ports:
    - port: 443
      targetPort: 8000
  type: LoadBalancer
---

#chat-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: songjih452/paran:chat-latest
          imagePullPolicy: Always
---

# comment-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:

      dnsPolicy: ClusterFirst
      containers:
        - name: comment-service
          image: songjih452/paran:comment-latest
          imagePullPolicy: Always
---

#file-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: songjih452/paran:file-latest
          imagePullPolicy: Always
---

#group-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-service
  template:
    metadata:
      labels:
        app: group-service
    spec:
      containers:
        - name: group-service
          image: songjih452/paran:group-latest
          imagePullPolicy: Always
---

#room-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-service
  template:
    metadata:
      labels:
        app: room-service
    spec:
      containers:
        - name: room-service
          image: songjih452/paran:room-latest
          imagePullPolicy: Always
---

#user-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: songjih452/paran:user-latest
          imagePullPolicy: Always
---
